--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <br>
 
     <h2>Videos</h2>
-    <video autoplay width="320" height="240" controls>
+    <video width="320" height="240" controls autoplay>
       <source src="assets/videos/video1.MOV" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <video autoplay width="320" height="240" controls>
+    <video width="320" height="240" controls autoplay>
       <source src="assets/videos/video2.MOV" type="video/mp4">
         Your browser does not support the video tag.
     </video>
