--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         Your browser does not support the video tag.
     </video>
     <video width="320" height="240" controls autoplay>
-      <source src="assets/videos/v1.mp4" type="video/mp4">
+      <source src="assets/videos/video2.MOV" type="video/mp4">
         Your browser does not support the video tag.
     </video>
   </body>
