--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
 
     <h2>Videos</h2>
-    <video width="320" height="240" controls autoplay>
+    <video autoplay width="320" height="240" controls>
       <source src="assets/videos/video1.MOV" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <video width="320" height="240" controls autoplay>
+    <video autoplay width="320" height="240" controls>
       <source src="assets/videos/video2.MOV" type="video/mp4">
         Your browser does not support the video tag.
     </video>
