--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>LAB REDES</h1>
 
     <h2>Team members</h2>
-    <p>Brandon Bohórquez - ba.bohorquez10 - Ingeniería de Sistemas y Computación - 8 semestre</p>
-    <p>Julio Poveda - ja.poveda10 - Ingeniería de Sistemas y Computación - 7 semestre</p>
-    <p>Andrés Sandoval - a.sandoval1303 - Ingeniería de Sistemas y Computación - 8 semestre</p>
+    <p>Brandon Bohórquez - ba.bohorquez10@uniandes.edu.co - Ingeniería de Sistemas y Computación - 8 semestre</p>
+    <p>Julio Poveda - ja.poveda10@uniandes.edu.co - Ingeniería de Sistemas y Computación - 7 semestre</p>
+    <p>Andrés Sandoval - a.sandoval1303@uniandes.edu.co - Ingeniería de Sistemas y Computación - 8 semestre</p>
     <br>
 
     <h2>Images</h2>
